<resources>
    <string name="app_name">PeriGigi Apps</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_deteksi">Detection</string>
    <string name="title_search">Search</string>
    <string name="title_konsultasi">Consultation</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="splashscreen2_text">Periksa Kesehatan Gigi Secara Berkala. Jangan Tunggu Sampai Sakit.</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="login">Masuk</string>
    <string name="email">Email</string>
    <string name="shr_hint_email">Email</string>
    <string name="shr_hint_password">Password</string>
    <string name="imagelogo">imagelogo</string>
    <string name="peri_gigi">Peri Gigi</string>
    <string name="text_login">Selamat Datang!</string>
    <string name="not_yet">Belum memiliki akun?</string>
    <string name="daftar">Daftar</string>
    <string name="nama_hint">Masukkan Nama Anda</string>
    <string name="numberphone_hint">Masukkan Nomor Telepon Anda</string>
    <string name="register">Daftar</string>
    <string name="already_yet">Anda Sudah Memiliki Akun?</string>
    <string name="tv_item_title">Title</string>
    <string name="article_kesehatan">Artikel Kesehatan</string>
    <string name="jenis_kelamin">Pilih Jenis Kelamin</string>
    <string name="account">account</string>
    <string name="change">Ubah Akun</string>
    <string name="delete">Hapus Akun</string>
    <string name="setting">Pengaturan</string>
    <string name="logout">Keluar</string>
    <string name="tab_text_1">Periksa Gigi</string>
    <string name="tab_text_2">Riwayat Periksa</string>
    <string name="image">image</string>
    <string name="kamera">kamera</string>
    <string name="galeri">galeri</string>
    <string name="unggah">Deteksi Gigi</string>
    <string name="title_activity_splashscreen">Splashscreen</string>

    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="splascreen2_text">Scan dan Periksa Gigi Anda Sekarang!</string>
    <string name="btn_text_periksa_sekarang">Periksa Sekarang</string>
    <string name="online">Online</string>
    <string name="chat">Mulai Chat</string>
</resources>