<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.perigigiapps.ui.screen.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_konsultasi"
        android:name="com.capstone.perigigiapps.ui.screen.konsultasi.KonsultasiFragment"
        android:label="@string/title_konsultasi"
        tools:layout="@layout/fragment_konsultasi" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.capstone.perigigiapps.ui.screen.konsultasi.KonsultasiFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_konsultasi" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_deteksi"-->
<!--        android:name="com.capstone.perigigiapps.ui.screen.deteksi.DeteksiFragment"-->
<!--        android:label="Deteksi"-->
<!--        tools:layout="@layout/fragment_deteksi" />-->

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstone.perigigiapps.ui.screen.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>