<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#262626"
            android:ellipsize="end"
            android:maxLines="1"
            card_view:layout_constraintStart_toEndOf="@+id/iv_item_photo"
            card_view:layout_constraintTop_toTopOf="@+id/iv_item_photo"
            tools:text="@string/tv_item_title" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/online_image"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            card_view:layout_constraintStart_toEndOf="@+id/iv_item_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            android:src="@drawable/baseline_circle_24" />

        <TextView
            android:id="@+id/tv_item_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="#00BB25"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            card_view:layout_constraintStart_toEndOf="@+id/online_image"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            tools:text="@string/online" />

        <TextView
            android:id="@+id/tv_item_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="11sp"
            android:textColor="#1D2329"
            card_view:layout_constraintStart_toEndOf="@+id/iv_item_photo"
            card_view:layout_constraintTop_toBottomOf="@+id/online_image"
            tools:text="@string/address_hint" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_button_messaging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="4dp"
            android:textSize="11sp"
            android:text="@string/chat"
            android:backgroundTint="#03256C" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>